--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,8 @@
 <head>
 
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <style>
-        .navbar { border-radius:0; }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
+
 
 </head>
 <body ng-app="myApp">
@@ -15,8 +14,9 @@
         <a class="navbar-brand" ui-sref="#">MOX NIX</a>
     </div>
     <ul class="nav navbar-nav">
-        <li><a ui-sref="dashboard">Home</a></li>
-        <li><a ui-sref="about">About</a></li>
+        <li><a ui-sref="dashboard">Dashboard</a></li>
+        <li><a ui-sref="single">Single</a></li>
+        <li><a ui-sref="about">about</a></li>
     </ul>
 </nav>
 
@@ -25,12 +25,14 @@
 </div>
 
 </body>
-
-<script src="http://code.angularjs.org/1.2.13/angular.js"></script>
+<script src="http://code.angularjs.org/1.5.8/angular.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script>
 <script src="app.js"></script>
+
 <script src="components/dashboard/dashboard.controller.js"></script>
 <script src="components/dashboard/dashboard.html"></script>
+<script src="components/single/single.controller.js"></script>
+<script src="components/single/single.html"></script>
 <script src="components/about/about.controller.js"></script>
 <script src="components/about/about.html"></script>
 </html>
