added portfolio page

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     </div>
     <ul class="nav navbar-nav">
         <li><a ui-sref="dashboard">Dashboard</a></li>
+        <li><a ui-sref="portfolio">Portfolio</a></li>
         <li><a ui-sref="single">Single</a></li>
         <li><a ui-sref="about">about</a></li>
     </ul>
@@ -28,7 +29,8 @@
 <script src="http://code.angularjs.org/1.5.8/angular.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script>
 <script src="app.js"></script>
-
+<script src="components/portfolio/portfolio.controller.js"></script>
+<script src="components/portfolio/portfolio.html"></script>
 <script src="components/dashboard/dashboard.controller.js"></script>
 <script src="components/dashboard/dashboard.html"></script>
 <script src="components/single/single.controller.js"></script>
